[project]
name = "av-names"
version = "0.1.0"
description = "names from texts"
authors = [
    {name = "DariaTM",email = "dasha-matveeva@yandex.ru"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
